--- a/mobile/home_mobile.html
+++ b/mobile/home_mobile.html
@@ -28,35 +28,35 @@
   <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="./assets3/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets3/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Template Stylesheet -->
-  <link href="./assets3/css/style.css" rel="stylesheet">
+  <link href="../assets3/css/style.css" rel="stylesheet">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="./assets1/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="../assets1/css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet" />
 
   <!-- Custom styles for this template -->
-  <link href="./assets1/css/style.css" rel="stylesheet" />
+  <link href="../assets1/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="./assets1/css/responsive.css" rel="stylesheet" />
+  <link href="../assets1/css/responsive.css" rel="stylesheet" />
 
  <!-- responsive style video-->
  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@clappr/player@latest/dist/clappr.min.js"></script>
  <!-- responsive style video-->
 
 
-  <link rel="stylesheet" type="text/css" href="./assets3/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../assets3/css/bootstrap.min.css">
 
     <link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.css">
 
-    <link rel="stylesheet" href="./assets/css/templatemo-hexashop.css">
+    <link rel="stylesheet" href="../assets/css/templatemo-hexashop.css">
     
  <link rel="stylesheet" href="../login/css/style.css">
 
@@ -69,15 +69,15 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="./assets1/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="../assets1/css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet" />
 
   <!-- Custom styles for this template -->
-  <link href="./assets1/css/style.css" rel="stylesheet" />
+  <link href="../assets1/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="./assets1/css/responsive.css" rel="stylesheet" />
+  <link href="../assets1/css/responsive.css" rel="stylesheet" />
 
   <title>One Place</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
@@ -134,7 +134,7 @@
          
           <div class="call_btn">
             <a class="navbar-brand" href=" ">
-              <img src="assets/images/one_place.png" style="width: 225px;" alt="" />
+              <img src="../assets/images/one_place.png" style="width: 225px;" alt="" />
             </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </div>
         </nav>
@@ -190,7 +190,7 @@
         <div class="col-md-3_ col-sm-6"><a href="login.html">
           <div class="content-box bg-green">
             <div class="img-box">
-              <img src="assets/images/hsqe_icon.png" alt="" /> 
+              <img src="../assets/images/hsqe_icon.png" alt="" /> 
             </div>
             <div class="detail-box">
               <p  style="font-family: Nunito; font-size: 16px;">
@@ -206,7 +206,7 @@
           <a href="https://forms.office.com/e/prmhzHQZpm">
           <div class="content-box bg-blue">
             <div class="img-box">
-              <img src="assets/images/caixa_ideias.png" alt="" />
+              <img src="../assets/images/caixa_ideias.png" alt="" />
             </div>
             <div class="detail-box">
               <p  style="font-family: Nunito;font-size: 16px;">
@@ -222,7 +222,7 @@
         <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-329e91b0-e21f-48fb-a071-456717ecc28e/a/9750c266-dd82-427a-8d32-610857c503b1?tenantId=329e91b0-e21f-48fb-a071-456717ecc28e">
           <div class="content-box bg-red">
             <div class="img-box">
-              <img src="assets/images/help-desk.png" alt="" />
+              <img src="../assets/images/help-desk.png" alt="" />
             </div>
             <div class="detail-box">
               <p  style="font-family: Nunito;font-size: 16px;">
@@ -238,7 +238,7 @@
         <div class="col-md-3_ col-sm-6"><a href="https://totalworkplace-my.sharepoint.com/:f:/r/personal/fernanda_pradella_external_totalenergies_com/Documents/Guide%20Geral?csf=1&web=1&e=zgEZLb ">
           <div class="content-box bg-azul">
             <div class="img-box">
-              <img src="assets/images/mk.png" alt="" style="width: 42%;"/>
+              <img src="../assets/images/mk.png" alt="" style="width: 42%;"/>
             </div>
             <div class="detail-box">
               <p  style="font-family: Nunito;color: azure; font-size: 16px;">
@@ -254,7 +254,7 @@
         <div class="col-md-3_ col-sm-6"><a href="https://forms.office.com/r/e3QC2ehvh4">
           <div class="content-box bg-lar">
             <div class="img-box">
-              <img src="assets/images/hr.png" alt="" />
+              <img src="../assets/images/hr.png" alt="" />
             </div>
             <div class="detail-box">
               <p  style="font-family: Nunito;font-size: 16px;">
@@ -271,7 +271,7 @@
        <!--  https://apps.powerapps.com/play/e/default-7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e/a/128ccb57-5277-4ce9-9173-60c22e5089d3?tenantId=7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e&source=portal" -->
           <div class="content-box bg-jur">
             <div class="img-box">
-              <img src="assets/images/documento-legal.png" alt="" />
+              <img src="../assets/images/documento-legal.png" alt="" />
             </div>
             <div class="detail-box">
               <p  style="font-family: Nunito;font-size: 16px;">
@@ -287,7 +287,7 @@
         <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e/a/ffc674eb-1a13-45c7-8f6d-56fad47de82e?tenantId=7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e&sourcetime=2023-08-21%2012%3A57%3A46Z">
           <div class="content-box bg-com">
             <div class="img-box">
-              <img src="assets/images/compras.png" alt="" />
+              <img src="../assets/images/compras.png" alt="" />
             </div>
             <div class="detail-box">
               <p  style="font-family: Nunito;font-size: 16px;">
@@ -314,10 +314,10 @@
   </footer>
   <!-- footer section -->
 
-  <script src="./assets1/js/jquery-3.4.1.min.js"></script>
-  <script src="./assets1/js/bootstrap.js"></script>
-  <script src="./assets1/js/circles.min.js"></script>
-  <script src="./assets1/js/custom.js"></script>
+  <script src="../assets1/js/jquery-3.4.1.min.js"></script>
+  <script src="../assets1/js/bootstrap.js"></script>
+  <script src="../assets1/js/circles.min.js"></script>
+  <script src="../assets1/js/custom.js"></script>
 
 
 
@@ -327,7 +327,7 @@
       <table> 
 <tr>
 <td align="center" >
-<a href=""><img src="./assets/images/one_place.png" alt="Imagem" style="width: 40%;"/></a>
+<a href=""><img src="../assets/images/one_place.png" alt="Imagem" style="width: 40%;"/></a>
   <br><br>
  
 <h6  style="font-family: Nunito;">Principais links para que você tenha apoio na <br>realização das atividades do seu dia a dia.</h6>
