--- a/home.html
+++ b/home.html
@@ -254,7 +254,7 @@
             </div>
           </div>
         </a>   </div>
-        <div class="col-md-3_ col-sm-6"><a href="https://forms.office.com/r/e3QC2ehvh4">
+        <div class="col-md-3_ col-sm-6"><a href="./">
           <div class="content-box bg-lar">
             <div class="img-box">
               <img src="assets/images/hr.png" alt="" />
