--- a/mobile/home_mobile.html
+++ b/mobile/home_mobile.html
@@ -187,7 +187,7 @@
       </div>
       <br>
       <div class="row">
-        <div class="col-md-3_ col-sm-6"><a href="login.html">
+        <div class="col-md-3_ col-sm-6"><a href="login_mobile.html">
           <div class="content-box bg-green">
             <div class="img-box">
               <img src="../assets/images/hsqe_icon.png" alt="" /> 
@@ -219,7 +219,7 @@
             </div>
           </div>
         </a> </div>
-        <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-329e91b0-e21f-48fb-a071-456717ecc28e/a/9750c266-dd82-427a-8d32-610857c503b1?tenantId=329e91b0-e21f-48fb-a071-456717ecc28e">
+        <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-329e91b0-e21f-48fb-a071-456717ecc28e/a/9750c266-dd82-427a-8d32-610857c503b1?tenantId=329e91b0-e21f-48fb-a071-456717ecc28e&hint=95bbab2a-32a1-4806-8447-2ecefdd35056&sourcetime=1695653686661">
           <div class="content-box bg-red">
             <div class="img-box">
               <img src="../assets/images/help-desk.png" alt="" />
@@ -251,7 +251,7 @@
             </div>
           </div>
         </a>   </div>
-        <div class="col-md-3_ col-sm-6"><a href="https://forms.office.com/r/e3QC2ehvh4">
+        <div class="col-md-3_ col-sm-6"><a href="404_manutencao_mobile.html">
           <div class="content-box bg-lar">
             <div class="img-box">
               <img src="../assets/images/hr.png" alt="" />
@@ -267,7 +267,7 @@
             </div>
           </div>
         </a>   </div>
-        <div class="col-md-3_ col-sm-6"><a href="./404_manutencao.html">
+        <div class="col-md-3_ col-sm-6"><a href="404_manutencao_mobile.html">
        <!--  https://apps.powerapps.com/play/e/default-7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e/a/128ccb57-5277-4ce9-9173-60c22e5089d3?tenantId=7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e&source=portal" -->
           <div class="content-box bg-jur">
             <div class="img-box">
