--- a/home.html
+++ b/home.html
@@ -254,7 +254,7 @@
             </div>
           </div>
         </a>   </div>
-        <div class="col-md-3_ col-sm-6"><a href="./">
+        <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-329e91b0-e21f-48fb-a071-456717ecc28e/a/2e3ea3e3-b288-454f-bc8f-70bd0655634c?tenantId=329e91b0-e21f-48fb-a071-456717ecc28e&hint=0429d5f5-7cf9-4f90-ba66-503f296d8f9e&sourcetime=1696856221843">
           <div class="content-box bg-lar">
             <div class="img-box">
               <img src="assets/images/hr.png" alt="" />
