--- a/home.html
+++ b/home.html
@@ -238,7 +238,7 @@
             </div>
           </div>
         </a>  </div>
-        <div class="col-md-3_ col-sm-6"><a href="https://totalworkplace-my.sharepoint.com/:f:/r/personal/fernanda_pradella_external_totalenergies_com/Documents/Guide%20Geral?csf=1&web=1&e=zgEZLb ">
+        <div class="col-md-3_ col-sm-6"><a href="https://totalworkplace.sharepoint.com/sites/Marketingteam697/Documents%20partages/Forms/AllItems.aspx?id=%2Fsites%2FMarketingteam697%2FDocuments%20partages%2FGeneral%2FGuide%20Geral&p=true&ct=1697460229187&or=Teams%2DHL&ga=1&LOF=1">
           <div class="content-box bg-azul">
             <div class="img-box">
               <img src="assets/images/mk.png" alt="" style="width: 42%;"/>
