--- a/home.html
+++ b/home.html
@@ -270,7 +270,7 @@
             </div>
           </div>
         </a>   </div>
-        <div class="col-md-3_ col-sm-6"><a href="./404_manutencao.html">
+        <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-329e91b0-e21f-48fb-a071-456717ecc28e/a/9a3e4c3c-d07b-413d-bbde-ca2cc0b12959?tenantId=329e91b0-e21f-48fb-a071-456717ecc28e&hint=b011c9e2-3609-4383-9982-ea8a2acb295a&sourcetime=1698063599540">
        <!--  https://apps.powerapps.com/play/e/default-7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e/a/128ccb57-5277-4ce9-9173-60c22e5089d3?tenantId=7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e&source=portal" -->
           <div class="content-box bg-jur">
             <div class="img-box">
