--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                             
                                     </td>  
                                     <td width="50%" valign="top" font-size="1px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
-                                        <a href="home.html" class="logo">
+                                        <a href="https://oneplace.flutterflow.app/" class="logo">
                                         <img src="assets/images/Design sem nome.png" alt="Web"
                                             style="width: 20vw;  height: 18vw;" /><span class="aa"></span></a><br><br>
                                             
