--- a/privacidadePatrom.html
+++ b/privacidadePatrom.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Helder Lourenco built the OnePlaceMobile app as
+                  Helder Lourenco built the Patrom - Safe To Load app as
                   a Free app. This SERVICE is provided by
                   Helder Lourenco at no cost and is intended for use as
                   is.
